--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@netlify/neon": "^0.1.0",
     "@react-google-maps/api": "^2.20.6",
+    "@vercel/speed-insights": "^1.2.0",
     "aos": "^2.3.4",
     "drizzle-orm": "^0.44.2",
     "express": "^5.1.0",
