Se añade el formulario para una newsletter

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,12 @@
 VITE_STRAPI_API_URL=https://your-strapi-backend-url.com
+
+# URL de conexión de la base de datos (ej. de Neon o Vercel Postgres)
+DATABASE_URL=""
+
+# Clave de API de SendGrid para enviar correos
+SENDGRID_API_KEY=""
+
+# Credenciales de Twilio para enviar WhatsApp
+TWILIO_ACCOUNT_SID=""
+TWILIO_AUTH_TOKEN=""
+TWILIO_PHONE_NUMBER=""
