--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
     "@netlify/neon": "^0.1.0",
     "@next/third-parties": "^15.4.5",
     "@react-google-maps/api": "^2.20.6",
+    "@sendgrid/mail": "^8.1.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "aos": "^2.3.4",
+    "cors": "^2.8.5",
     "drizzle-orm": "^0.44.2",
     "express": "^5.1.0",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "twilio": "^5.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
